# move_incremental

./: .gitignore  CMakeLists.txt  README.md  move_incremental_plugin_description.xml  package.xml
data/: long_wall.urdf  short_wall.urdf  sim-grid.yaml
include/move_incremental/: move_incremental.h  move_incremental_ros.h  potarr_point.h
launch/: grand_challenge_sim.launch
src/: move_incremental.cpp  move_incremental_ros.cpp
srv/: MakeNavPlan.srv  SetCostmap.srv
